fixes stretching

--- a/src/index.css
+++ b/src/index.css
@@ -250,7 +250,8 @@ body::-webkit-scrollbar {
 }
 
 .sideImage {
-  width: 100%;
+  max-width: 100%;
+  height: auto;
   display: block;
 }
 
